syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Episode {
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string title = 4;
  uint32 number = 5;
  uint32 decimal = 6;
  uint32 version = 7;
  string extra = 8;
}

message Download {
  google.protobuf.Timestamp published_date = 2;
  string resolution = 3;
  string comments = 4;
  string torrent = 5;
  string file_name = 6;
}

message DownloadCollection {
    Episode episode = 1;
    repeated Download downloads = 2;
}

service Downloads {
    rpc Subscribe (google.protobuf.Empty) returns (stream DownloadCollection) {};
}